src-ken&y/objects/Message_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used to manage which chatter groups are mentioned for batch messaging.</description>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>The group that is being mentioned in the message.</description>
        <inlineHelpText>The group that is being mentioned in the message.</inlineHelpText>
        <label>Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <description>The name of the process delivering messages.</description>
        <inlineHelpText>The name of the process delivering messages.</inlineHelpText>
        <label>Process Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Message Configuration</label>
</CustomObject>